src/test/ui/span/suggestion-non-ascii.stderr
error: cannot index a value of type `({integer},)`
  --> $DIR/suggestion-non-ascii.rs:14:21
   |
14 |     println!("☃{}", tup[0]);
   |                     ^^^^^^ help: to access tuple elements, use `tup.0`

error: aborting due to previous error

